# GuardedOps

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
cli/: ops-review  opsctl  routectl
docs/: architecture.md  route-preflight.md  session-review.md  threat-model.md  wrapper-release.md
examples/: fleet.example.json  route.example.json
examples/mock-app/config/: app.env
examples/session-review/sessions/: synthetic.jsonl
hooks/: ops_guard_policy.py
private/: README.md
scripts/: leak_scan.sh  release_gate.sh
server/: ops-wrapper  ops-wrapper.version.json  policy.example.json  sudoers.example
src/guarded_ops/: __init__.py  approval.py  config_patch.py  errors.py  fleet.py  hook_policy.py  opsctl.py  policy.py  redaction.py  review.py  route.py  wrapper.py
src/guarded_ops/cli/: ops_guard_hook.py  ops_review.py  opsctl.py  routectl.py
tests/: test_core.py  test_release_gate.py
